# pico-boost

./: .gitignore  automotive_pi_pico_input_protect.ods  gede2.ini  gede_core0.ini  gede_core1.ini  pid_calcs.ods  start_gdb.sh  start_gdb_c0.sh  start_gdb_c1.sh  upload_debug.sh
hardware/: automotive_pi_pico_input_protect.ods
hardware/kicad/pico_boost/: pico_boost.kicad_prl  pico_boost.kicad_pro  ~pico_boost.kicad_sch.lck
hardware/pico_boost/: pico_boost.kicad_sch
src/: AdcReader.cpp  AdcReader.hpp  BoostControl.cpp  BoostControl.hpp  BoostControlParameters.hpp  BoostOptions.cpp  BoostOptions.hpp  BoschMap_0261230119.cpp  BoschMap_0261230119.hpp  CMakeLists.txt  Eeprom.cpp  Eeprom.hpp  Eeprom_24CS256.cpp  Eeprom_24CS256.hpp  PicoAdcReader.cpp  PicoAdcReader.hpp  PicoPwm.cpp  PicoPwm.hpp  PicoSwitch.cpp  PicoSwitch.hpp  TM1637_charMap.txt  TM1637_pico.cpp  TM1637_pico.hpp  bosch_map_0261230119.cpp  bosch_map_0261230119.hpp  gpioAlloc.hpp  pico_boost.cpp  pico_boost_control.cpp  pico_boost_control.hpp  pico_boost_options.cpp  pico_boost_options.hpp
